# tasmil-indexer-aptos

./: README.md
aptos-indexer-processor/: Cargo.toml  README.md  run-tasmil.sh
aptos-indexer-processor-example/: -indexer-processor-example  Cargo.toml  diesel.toml  run-cellana.sh  run-tasmil.sh
aptos-indexer-processor-example/migrations/: update_coin_volume_schema.sql
aptos-indexer-processor-example/src/common/: processor_status_saver.rs
aptos-indexer-processor-example/src/config/: indexer_processor_config.rs  processor_config.rs
aptos-indexer-processor-example/src/db/common/models/: apt_models.rs  coin_volume_models.rs  mod.rs
aptos-indexer-processor-example/src/db/postgres/: schema.rs
aptos-indexer-processor-example/src/db/postgres/migrations/2025-01-01-000000_create_initial_tables/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-10-104412_simplify_apt_data_table/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-10-140838_restructure_apt_data_with_pool_id/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-11-044900_separate_apt_usdc_volumes/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-11-050353_add_fee_columns/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-11-091635_add_usdt_fields/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-11-102618_fix_usdt_default_values/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-11-165430_change_pool_to_protocol_name/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-12-100819_add_stapt_fields/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-12-102723_add_abtc_fields_to_apt_data/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-13-154844_add_weth_fields/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-14-142706_remove_abtc_fields/: down.sql  up.sql
aptos-indexer-processor-example/src/db/postgres/migrations/2025-06-15-064252_create_coin_volume_24h_table/: down.sql  up.sql
aptos-indexer-processor-example/src/processors/: mod.rs  tasmil_processor.rs
aptos-indexer-processor-example/src/processors/events/: cellana_processor.rs  mod.rs  swap_processor.rs  volume_calculator.rs
aptos-indexer-processor-example/src/processors/events/cellana/: constants.rs  mod.rs  processor.rs
aptos-indexer-processor-example/src/processors/events/hyperion/: mod.rs  processor.rs
aptos-indexer-processor-example/src/processors/events/liquidswap/: processor.rs
aptos-indexer-processor-example/src/processors/events/sushiswap/: constants.rs  processor.rs
aptos-indexer-processor-example/src/processors/events/thala/: constants.rs  processor.rs
aptos-indexer-processor-example/src/utils/: chain_id.rs  mod.rs  processor_trait.rs  starting_version.rs
aptos-indexer-processor/src/: lib.rs  main.rs
aptos-indexer-processor/src/common/: mod.rs
aptos-indexer-processor/src/config/: mod.rs  processor_config.rs
aptos-indexer-processor/src/db/: mod.rs
aptos-indexer-processor/src/db/common/models/: coin_volume_models.rs  mod.rs
aptos-indexer-processor/src/db/postgres/: mod.rs  schema.rs
aptos-indexer-processor/src/db/postgres/migrations/2025-01-01-000000_create_initial_tables/: down.sql  up.sql
aptos-indexer-processor/src/processors/: mod.rs  tasmil_processor.rs
aptos-indexer-processor/src/processors/events/: bucket_calculator.rs  mod.rs  volume_calculator.rs
aptos-indexer-processor/src/processors/events/cellana/: constants.rs  processor.rs
aptos-indexer-processor/src/processors/events/hyperion/: constants.rs  processor.rs
aptos-indexer-processor/src/processors/events/liquidswap/: constants.rs  mod.rs  processor.rs
aptos-indexer-processor/src/processors/events/sushiswap/: mod.rs  processor.rs
aptos-indexer-processor/src/processors/events/thala/: constants.rs  mod.rs  processor.rs
aptos-indexer-processor/src/utils/: database.rs  mod.rs
